Lots of changes/additions, changed blueprintjs dependency to material-ui

--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "electron": "^4.0.1",
-    "electron-is-dev": "^1.0.1",
     "electron-builder": "^20.38.4",
     "electron-devtools-installer": "^2.2.4",
+    "electron-is-dev": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.6.3",
     "style-loader": "^0.23.1",
     "wait-on": "^3.2.0",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.10.0",
-    "@blueprintjs/icons": "^3.4.0",
-    "electron-log": "^2.2.17",
-    "electron-window-state": "^5.0.3",
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "chalk": "^2.4.2",
     "common-tags": "^1.8.0",
     "cross-env": "^5.2.0",
+    "electron-log": "^2.2.17",
+    "electron-window-state": "^5.0.3",
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
-    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -48,12 +49,12 @@
     "react-router-page-transition": "^3.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0",
     "source-map-support": "^0.5.9",
+    "typeface-roboto": "^0.0.54",
     "winston": "^3.1.0"
   },
   "build": {
-    "productName": "Project Manga App",
+    "productName": "Hakuro",
     "copyright": "",
     "asar": true,
     "win": {
